--- a/NEWS
+++ b/NEWS
@@ -9,9 +9,10 @@ This file lists noteworthy changes in SaunaFS.
  - (common) Create example pam.d file on build/install
  - (all) Remove dependency on fuse2
  - (admin) Allow dumping configuration that is explicitly set
- - (mount) Remove FUSE2 client. sfsmount is the only way to mount now and it
-   replaces the old mfsmount3, mfsmount on the other hand has not been replaced
-   but removed since we do not support FUSE2 anymore
+ - (mount) Remove FUSE2 client
+   sfsmount is the only way to mount now and it replaces the old mfsmount3,
+   mfsmount on the other hand has not been replaced but removed since we do not
+   support FUSE2 anymore.
  - (mount) Add a multi-threaded readahead to improve single-stream reading
  - (mount) Add readworkers and maxreadaheadrequests command line arguments
  - (chunkserver) Deprecate old chunk formats (mfs and liz) and add the new SPLIT
