--- a/debian/changelog
+++ b/debian/changelog
@@ -8,10 +8,13 @@ saunafs (4.0.0) stable; urgency=medium
  * (common) Create example pam.d file on build/install
  * (all) Remove dependency on fuse2
  * (admin) Allow dumping configuration that is explicitly set
- * (mount) Remove FUSE2 client (mfsmount3 replaces mfsmount as sfsmount)
+ * (mount) Remove FUSE2 client.
+   sfsmount is the only way to mount now and it replaces the old mfsmount3,
+   mfsmount on the other hand has not been replaced but removed since we do
+   not support FUSE2 anymore
  * (mount) Add a multi-threaded readahead to improve single-stream reading
  * (mount) Add readworkers and maxreadaheadrequests command line arguments
- * (chunkserver) Deprecate old chunk formats and add the new SPLIT format
+ * (chunkserver) Deprecate old chunk formats (mfs and liz) and add the new SPLIT format
  * (chunkserver) Allow to store metadata and data chunk parts in separate directories
  * (chunkserver) Modify sfshdd.cfg format to allow SPLIT format
  * (chunkserver) Add plugin architecture for Disk implementations
