Changelog for version 4.0.0 (#5)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,32 @@
-saunafs (4.0.0) unstable; urgency=medium
+saunafs (4.0.0) stable; urgency=medium
 
-	* This is a release candidate for SaunaFS 4.0.0.
-	* This release is not yet stable, but it is feature complete.
+ * (all) Enable C++23
+ * (all) Rebranding to SaunaFS
+ * (all) XOR goal type deprecated (will be removed in a future release)
+ * (all) Tape server support deprecated (will be removed next release)
+ * (all) Add dependency on libyaml-cpp
+ * (common) Create example pam.d file on build/install
+ * (all) Remove dependency on fuse2
+ * (admin) Allow dumping configuration that is explicitly set
+ * (mount) Remove FUSE2 client.
+   sfsmount is the only way to mount now and it replaces the old mfsmount3,
+   mfsmount on the other hand has not been replaced but removed since we do
+   not support FUSE2 anymore
+ * (mount) Add a multi-threaded readahead to improve single-stream reading
+ * (mount) Add readworkers and maxreadaheadrequests command line arguments
+ * (chunkserver) Deprecate old chunk formats (mfs and liz) and add the new SPLIT format
+ * (chunkserver) Allow to store metadata and data chunk parts in separate directories
+ * (chunkserver) Modify sfshdd.cfg format to allow SPLIT format
+ * (chunkserver) Add plugin architecture for Disk implementations
+ * (chunkserver) Refactor long files to better distribute responsibilities
+ * (chunkserver) Add object pool to reuse OutputBuffers in read operations
+ * (chunkserver) Add configuration option to disable CRC checking during read
+ * (chunkserver) Remove legacy replications
+ * (nfs-ganesha) Update nfs-ganesha plugin to support nfs-ganesha v4.3
+ * (nfs-ganesha) Enable NFS ACL support at compilation time
+ * (nfs-ganesha) Refactor nfs-ganesha plugin
+ * (nfs-ganesha) Add Doxygen documentation
+ * (nfs-ganesha) Create GaneshaTests suite (fio, performance, copy file)
 
- -- SaunaFS Team <contact@saunafs.com>  Fri, 01 Dec 2023 05:16:12 +0000
+
+ -- SaunaFS Team <contact@saunafs.com>  Tue, 27 Feb 2024 17:42:07 +0000
