mount, docs: Apply further review suggestions
List of changes:
- fix compilation error in Linux
- rename Windows option to sfsspecialwritemode
- only ignore flush syscall, previous implementation mocked also the
fsync, but it seems not needed

--- a/doc/sfsmount.1.adoc
+++ b/doc/sfsmount.1.adoc
@@ -205,7 +205,7 @@ Equivalent to *--nostdopts* (*-n*) option for use in fstab.
 Equivalent to *--nonempty* option for use in fstab.
 
 *-o sfsignoreflush*::
-DANGEROUS. Ignore flush/fsync usual behavior by replying SUCCESS to it 
+DANGEROUS. Ignore flush usual behavior by replying SUCCESS to it 
 inmediately. Targets fast creation of small files, but may cause data loss 
 during crashes when allegedly flushed data is still being processed.
 
