--- a/doc/sfsmount.1.adoc
+++ b/doc/sfsmount.1.adoc
@@ -204,6 +204,10 @@ Equivalent to *--nostdopts* (*-n*) option for use in fstab.
 *-o nonempty*::
 Equivalent to *--nonempty* option for use in fstab.
 
+*-o sfsdirectio=*'0|1'::
+Whether to use FUSE DirectIO. This may improve performance when reading large
+files under certain conditions.
+
 General mount options (see *mount*(8) manual):
 
 *-o rw* | *-o ro*::
