--- a/doc/sfsmount.1.adoc
+++ b/doc/sfsmount.1.adoc
@@ -205,8 +205,8 @@ Equivalent to *--nostdopts* (*-n*) option for use in fstab.
 Equivalent to *--nonempty* option for use in fstab.
 
 *-o sfsignoreflush*::
-DANGEROUS. Ignore flush usual behavior by replying SUCCESS to it 
-inmediately. Targets fast creation of small files, but may cause data loss 
+Advanced: use with caution. Ignore flush usual behavior by replying SUCCESS to it 
+immediately. Targets fast creation of small files, but may cause data loss 
 during crashes when allegedly flushed data is still being processed.
 
 General mount options (see *mount*(8) manual):
