--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,22 @@
+saunafs (4.1.0) stable; urgency=medium
+  * (master) Improve master startup time by allowing parallel metadata loading
+  * (mount) Add `sfsdirectio` mount option
+   Previously you had to edit .saunafs_tweaks file.
+  * (mount) Fix undefined behavior in client
+   Could cause a deadlock when reconnecting after a session was lost.
+  * (mount) Fix wrong GID being shown in .oplog
+  * (mount) Improve DirEntryCache behaviour by caching getattr/lookup operations
+  * (admin) Add `--help option` in saunafs-admin
+  * (admin) Add `--defaults` option for `dump-config` in saunafs-admin
+  * (cgi) Update saunafs-cgi.
+  * (all) Add support for Ubuntu 24.04
+  * (all) Fix compilation issues on GCC 13
+  * (all) Various bug fixes, especially regarding tests
+  * (windows) Support compiling common and client library
+  * (windows) Improve behavior for Windows client
+
+ -- SaunaFS Team <contact@saunafs.com>  Thu, 09 May 2024 14:26:04 +0300
+
 saunafs (4.0.1) stable; urgency=low
 
   * (docs) Fix README.md and CONTRIBUTING.md links.
