--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,14 @@
 This file lists noteworthy changes in SaunaFS.
 
+ * SaunaFS (4.3.0) (2024-07-12)
+ - cgi: Add png version of logo (#124)
+ - tidy(tests): Disable test_chunk_rebalancing (#123)
+ - fuse: Fix sfscacheperinodepercentage help (#122)
+ - feat(chunkserver): Expose gDiskManager to plugins (#121)
+ - fix(errors): Add explicit std string include (#119)
+ - feat(chunkserver): Extend the PluginManager
+ - feat(chunkserver): Add DiskManager interface
+
  * SaunaFS (4.2.0) (2024-06-19)
  - (all) Fix slogger dependencies compilation
  - (common) Split off slogger from common
