--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+saunafs (4.3.0) stable; urgency=medium
+  * cgi: Add png version of logo (#124)
+  * tidy(tests): Disable test_chunk_rebalancing (#123)
+  * fuse: Fix sfscacheperinodepercentage help (#122)
+  * feat(chunkserver): Expose gDiskManager to plugins (#121)
+  * fix(errors): Add explicit std string include (#119)
+  * feat(chunkserver): Extend the PluginManager
+  * feat(chunkserver): Add DiskManager interface
+
+ -- SaunaFS Team <contact@saunafs.com>  Fri, 12 Jul 2024 13:06:47 +0000
+
 saunafs (4.2.0) stable; urgency=medium
   * (all) Fix slogger dependencies compilation
   * (common) Split off slogger from common
