feat(mount): Add readcachemaxsize option
For allowing the client process to limit the expected memory
in system for reading operations, an option was added so that
the client also waits for availability of system memory, avoiding
the client process to crash.

--- a/doc/sfsmount.1.adoc
+++ b/doc/sfsmount.1.adoc
@@ -162,6 +162,9 @@ disables cache (default: 0).
 *-o readaheadmaxwindowsize=*'KB'::
 Set max value of readahead window per single descriptor in kibibytes (default: 16384).
 
+*-o readcachemaxsize=*'MB'::
+Set max value of read cache size in mebibytes (default: 16384).
+
 *-o readworkers=*'N'::
 Define number of read workers (default: 30).
 
