chore: do interactive fixing of some ambigous typos using codespell
=== Do not change lines below ===
{
 "chain": [],
 "cmd": "codespell -w -i 3 -C 2",
 "exit": 0,
 "extra_inputs": [],
 "inputs": [],
 "outputs": [],
 "pwd": "."
}
^^^ Do not change lines above ^^^

Signed-off-by: Yaroslav Halchenko <debian@onerussian.com>

--- a/doc/sfschunkserver.8.adoc
+++ b/doc/sfschunkserver.8.adoc
@@ -65,7 +65,7 @@ or *kill*. Default action is *restart*.
 == FILES
 
 *sfschunkserver.cfg*:: configuration file for SaunaFS chunkserver process;
-refer to *sfschunkserver.cfg*(5) manual for defails
+refer to *sfschunkserver.cfg*(5) manual for details
 
 *sfshdd.cfg*:: list of directories (mountpoints) used for SaunaFS storage (one
 per line; directory prefixed by *** character causes given directory to be
