--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,19 @@
 This file lists noteworthy changes in SaunaFS.
 
+ * SaunaFS (4.5.0) (2024-08-12)
+ - ci: Abort previous concurrent tests
+ - ci: Update de base docker image on build
+ - fix(tests): Fix typo in setup-machine script
+ - fix(tests): Amend upgrade tests (#146)
+ - fix: Update services to wait for network (#151)
+ - fix: Update uraft service to restart on failure (#153)
+ - fix: Release compilation on GCC 14 (#148)
+ - feat(chunkserver): Extend IDiskManager interface (#143)
+ - test: Verify master loading legacy metadata
+ - feat: Load legacy metadata file
+ - fix: Allow legacy sessions download
+ - fix: Allow legacy metadata download
+
  * SaunaFS (4.4.0) (2024-07-31)
  - ci(.github): Add check for Conventional Commits (#131)
  - feat(metrics): Add initial prometheus support (#98)
