--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+saunafs (4.5.0) stable; urgency=medium
+  * ci: Abort previous concurrent tests
+  * ci: Update de base docker image on build
+  * fix(tests): Fix typo in setup-machine script
+  * fix(tests): Amend upgrade tests (#146)
+  * fix: Update services to wait for network (#151)
+  * fix: Update uraft service to restart on failure (#153)
+  * fix: Release compilation on GCC 14 (#148)
+  * feat(chunkserver): Extend IDiskManager interface (#143)
+  * test: Verify master loading legacy metadata
+  * feat: Load legacy metadata file
+  * fix: Allow legacy sessions download
+  * fix: Allow legacy metadata download
+
+ -- SaunaFS Team <contact@saunafs.com>  Mon, 12 Aug 2024 15:11:39 +0000
+
 saunafs (4.4.0) stable; urgency=medium
   * ci(.github): Add check for Conventional Commits (#131)
   * feat(metrics): Add initial prometheus support (#98)
