feat(mount): Add ignore to getxattr
The ignoregetxattr added option targets to ignore
all getxattr operations executed during writing processes.
This change fools the filesystem, assuming that this
operation was performed and optimizes write process by
avoiding unnecessary getxattr calls.

--- a/doc/sfsmount.1.adoc
+++ b/doc/sfsmount.1.adoc
@@ -221,6 +221,10 @@ Advanced: use with caution. Ignore flush usual behavior by replying SUCCESS to i
 immediately. Targets fast creation of small files, but may cause data loss
 during crashes when allegedly flushed data is still being processed.
 
+*-o sfsignoregetxattr=0|1*::
+Ignore getxattr by returning empty XattrReply to simulate correct response
+immediately, without requesting any extended attribute info to master server.
+
 *-o sfsdirectio=*'0|1'::
 Whether to use FUSE DirectIO. This may improve performance when reading large
 files under certain conditions.
