--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+saunafs (4.6.0) stable; urgency=medium
+  * fix(mount): Set default cacheExpirationTime to 0 (#180)
+  * feat(mount): Add readcachemaxsize option (#145)
+  * feat(master): Add empty reserved files option (#176)
+  * fix(mount): Fix random case option parsing (#135)
+  * feat(chunkserver): Add IDiskManager::getDiskForGC (#169)
+  * test: Improve `stop_ganesha()` function (#168)
+  * fix(ci): Modify timeout from env (#165)
+  * ci: Fix tests behavior (#172)
+  * fix(uraft): Fix missing floating ip address
+  * fix(mount): Fix create time (Windows) (#167)
+  * feat(admin): Add list-disk-groups command (#155)
+
+ -- SaunaFS Team <contact@saunafs.com>  Thu, 05 Sep 2024 14:23:04 +0000
+
 saunafs (4.5.0) stable; urgency=medium
   * ci: Abort previous concurrent tests
   * ci: Update de base docker image on build
