feat(slogger): Add setting up logging using env/config variables
Previously, it wasn't possible to setup specific log levels. You had
had to start with -d (debug) mode to get debug messages. This commit
introduces adding specifc log levels using either LOG_LEVEL in config
file, or using SAUNAFS_LOG_LEVEL from the environment

It also fixes -d always setting the level to debug, which is what you
may not want if you want the process to run in the foreground.

--- a/doc/sfschunkserver.cfg.5.adoc
+++ b/doc/sfschunkserver.cfg.5.adoc
@@ -146,6 +146,16 @@ the operation is considered failed and is immediately aborted (default: 1000)
 replication. After this timeout, next wave of read requests is sent to other
 chunkservers (default: 500)
 
+*LOG_LEVEL*:: Setup logging. Uses the environment variable SAUNAFS_LOG_LEVEL or
+config value LOG_LEVEL to determine logging level. Valid log levels are
+- 'trace'
+- 'debug'
+- 'info'
+- 'warn' or 'warning'
+- 'err' or 'error'
+- 'crit' or 'critical'
+- 'off'
+
 == REPORTING BUGS
 
 Report bugs to the Github repository <https://github.com/leil/saunafs> as an
