--- a/doc/sfschunkserver.cfg.5.adoc
+++ b/doc/sfschunkserver.cfg.5.adoc
@@ -96,12 +96,15 @@ from other chunkservers to this chunkserver in every second (by default
 undefined, i.e. no limits)
 
 *NR_OF_NETWORK_WORKERS*:: number of threads which handle (in a round-robin
-manner) connections with clients (default is 1); these threads are responsible
+manner) connections with clients (default is 2); these threads are responsible
 for reading from sockets and coping data from internal buffers to sockets
 
 *NR_OF_HDD_WORKERS_PER_NETWORK_WORKER*:: number of threads that each network
 worker may use to do disk operations like opening chunks, reading or writing
-them (default is 2)
+them (default is 16)
+
+*BGJOBSCNT_PER_NETWORK_WORKER*:: maximum number of jobs that each network worker
+may use for disk operations (default is 1000)
 
 *READ_AHEAD_KB*:: additional number of kilobytes which should be passed to
 posix_fadvise(POSIX_FADV_WILLNEED) before reading data from a chunk (default is
