feat(master): Add option to toggle data parts priority
Originally, the master server was placing the data parts in the
chunkservers with higher available space factor. Then, the parity parts
were placed in the remaining chunkservers.

If the cluster is not balanced (some chunkservers have more space than
others), then almost all parities land in the same chunkservers. This
causes that reading is always issued to the chunkservers with data
parts, so the chunkservers with parity parts are barely used when
reading.

This commit introduces the configuration variable PRIORITIZE_DATA_PARTS
to control this behavior. The default value is 1 (active), which is the
same as it was before.

--- a/doc/sfsmaster.cfg.5.adoc
+++ b/doc/sfsmaster.cfg.5.adoc
@@ -238,6 +238,11 @@ chunkserver disk usage to determine most fitting chunkserver. Heavy loaded
 chunkservers will be picked for operations less frequently. (default is 0,
 correct values are in range from 0 to 0.5)
 
+*PRIORITIZE_DATA_PARTS*:: When set, master server will prioritize data parts in
+EC goals to land in the chunkservers with higher percentage of available space.
+Could cause parities landing always in the same chunkservers if the cluster is
+not well balanced. (default: 1)
+
 *ENABLE_PROMETHEUS*:: Whether to enable Prometheus support and metric
 collection. Note that this requires compiling with Prometheus support. Set to
 either 1 to enable, or 0 to disable (default is 0)
