feat(chunkserver): Make configurable masterconn workers
Previously the master connection had a fixed amount of 10 worker
threads in the jobs pool. This commit makes it configurable, to be
able to adapt it to the expected workload.

For instance, a chunkserver handling a small number of disks may have a
lower value.

--- a/doc/sfschunkserver.cfg.5.adoc
+++ b/doc/sfschunkserver.cfg.5.adoc
@@ -51,6 +51,10 @@ the master server after disconnection (default is 5)
 *MASTER_TIMEOUT*:: timeout (in seconds) for the master server connection
 (default is 60, minimum is 0.01)
 
+*MASTER_NR_OF_WORKERS*:: number of threads that the connection to master may use
+to process operations on chunks, like create, duplicate, replicate and truncate
+(default is 10, minimum is 2)
+
 *BIND_HOST*:: local address to use for connecting with the master server
 (default is ***, i.e. default local address)
 
