fix: Address PR suggestions
Fix references to read cache max size percentage
option for better readability on sfsmount doc and
help text output.

--- a/doc/sfsmount.1.adoc
+++ b/doc/sfsmount.1.adoc
@@ -163,7 +163,7 @@ disables cache (default: 1000).
 Set max value of readahead window per single descriptor in kibibytes (default: 16384).
 
 *-o readcachemaxsizepercentage=*'P'::
-Set percentage of system memory used for max value of read cache size (default: 60).
+Set percentage of system memory used for max value of read cache size (default: 60%).
 
 *-o readworkers=*'N'::
 Define number of read workers (default: 30).
