fix(mount): Enhance read cache handling and add tests (#202)
This commit introduces several enhancements and fixes to the read
cache mechanism, focusing on handling corrupted files and optimizing
read cache memory usage. The changes aim to improve the reliability
and efficiency of read operations under various conditions, including
low read cache memory scenarios and when encountering corrupted 
file segments.

Changes:
- Fix read cache max size option to handle dynamic default cache
  memory based on system memory capabilities.
- Improve references to read cache max size percentage option for
  better readability in documentation and help text.
- Fix read cache recovery on failure to ensure memory is released
  and read requests can complete successfully.
- Add test to verify that files with corrupted segments can still
  be read multiple times, ensuring the read cache releases memory
  over time.
- Add test to confirm that the client does not freeze or fail read
  operations due to low read cache memory.

Co-authored-by: Dave <dave@leil.io>

--- a/doc/sfsmount.1.adoc
+++ b/doc/sfsmount.1.adoc
@@ -162,8 +162,8 @@ disables cache (default: 1000).
 *-o readaheadmaxwindowsize=*'KB'::
 Set max value of readahead window per single descriptor in kibibytes (default: 16384).
 
-*-o readcachemaxsize=*'MB'::
-Set max value of read cache size in mebibytes (default: 16384).
+*-o readcachemaxsizepercentage=*'P'::
+Set percentage of system memory used for max value of read cache size (default: 60%).
 
 *-o readworkers=*'N'::
 Define number of read workers (default: 30).
