feat: Reduce malloc virtual memory usage
The new option LIMIT_GLIBC_MALLOC_ARENAS allows to tune (from
configuration) the number of arenas used by malloc in environments with
glibc. Setting it to a small positive number like 4 or 8, reduce the
virtual memory used by the application, at the cost of possible
performance drop for multi-threading (due to contention).

The default is 0, which means disabled (lets glibc decide the values).
The options is meant to be used in environments with limited RAM.

Signed-off-by: guillex <guillex@leil.io>

--- a/doc/sfsmaster.cfg.5.adoc
+++ b/doc/sfsmaster.cfg.5.adoc
@@ -52,6 +52,13 @@ sfsmaster)
 *LOCK_MEMORY*:: whether to perform mlockall() to avoid swapping out sfsmaster
 process (default is 0, i.e. no)
 
+*LIMIT_GLIBC_MALLOC_ARENAS*:: Linux only: limit glibc malloc arenas to given
+value - prevents from using huge amount of virtual memory. This can influence
+performance by reducing memory fragmentation and improving cache locality, but
+it may also lead to contention and reduced parallelism in multi-threaded
+applications. Use it in constrained memory environments, recommended values are
+4 or 8. (default is 0: disabled or let glibc decide)
+
 *NICE_LEVEL*:: nice level to run daemon with (default is -19 if possible; note:
 process must be started as root to increase priority)
 
