feat(mount): add log on OS notification area (#280)
This change adds a log on the specific OS notification area,
specifically for errors associated with the reading, writing and master
disconnection processes, which allows the user to have a proper feedback
on the each error.

Signed-off-by: rolysr <rolysr@leil.io>

--- a/doc/sfsmount.1.adoc
+++ b/doc/sfsmount.1.adoc
@@ -230,6 +230,13 @@ contention and reduced parallelism in multi-threaded applications.
 Use it in constrained memory environments, recommended values are 4 or 8.
 (default is 0: disabled or let glibc decide)
 
+*-o sfslognotificationarea=*'0|1'::  
+Enable/disable logging to Linux notification area (default: 0).
+
+*-o sfsmessagesuppressionperiod=*'N'::
+Set period of message suppression in seconds for logging on notification area 
+(default: 10)
+
 General mount options (see *mount*(8) manual):
 
 *-o rw* | *-o ro*::
