feat(uraft): Introduce floating IP manager for HA
Previously, a floating IP drop triggered a new election in uRaft,
sometimes leading to leader flip-flopping.

This commit introduces a Floating IP manager to improve high
availability by actively monitoring and managing floating IP
availability. It uses a socket-based event listener to detect
floating IP loss and initiates recovery actions to restore it.

Co-authored-by: Piotr Modrzyk <piotr.modrzyk@gmail.com>

Signed-off-by: Crash <crash@leil.io>

--- a/doc/saunafs-uraft.cfg.5.adoc
+++ b/doc/saunafs-uraft.cfg.5.adoc
@@ -59,6 +59,9 @@ heartbeat messages.
 *LOCAL_MASTER_CHECK_PERIOD*:: *[advanced]* period in milliseconds between
 checking whether local master is alive.
 
+*URAFT_FLOATING_IP_CHECK_PERIOD*:: *[advanced]* period in milliseconds between
+checking whether the floating IP is alive.
+
 == REPORTING BUGS
 
 Report bugs to the Github repository <https://github.com/leil/saunafs> as an
